<resources>
    <string name="close">Close</string>
    <string name="event_details">Event Details</string>
    <string name="app_name">Mattituck Mobile</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="main_search_catalog">Search Catalog</string>
    <string name="main_search_below">Find books, movies, musics and more</string>
    <string name="main_news_letter">Newsletter</string>
    <string name="main_news_below">View the library\’s quarterly newsletter</string>
    <string name="main_library_info">Library Information</string>
    <string name="main_library_below">Library hours, directions, social media pages and more</string>
    <string name="main_my_account">My Account</string>
    <string name="main_my_below">View your record, digital library card and check notifications</string>
    <string name="main_event_calender">Event Calendar</string>
    <string name="main_event_below">Search for events and programs happening at the library</string>
    <string name="main_research_data">Research Database</string>
    <string name="main_research_below">Access online research databases</string>
    <string name="main_online_services">Online Services</string>
    <string name="main_online_below">Download eBooks, magazines, audiobooks and more</string>
    <string name="main_unique_services">Unique Services</string>
    <string name="main_unique_below">Special service offered by the library</string>
    <string name="sc_title">Search the Library Catalog</string>
    <string name="sc_subtitle">The Mattituck-Laurel Library has a collection of over 100,000 books, movies, music and more. Patrons can browse the collection and reserve items right from their mobile devices.</string>
    <string name="sc_search_collection">Search Collection</string>
    <string name="sc_search_below">Enter keyword to look for items in the library catalog</string>
    <string name="sc_scan_isbn">Scan ISBN</string>
    <string name="sc_scan_below">Enter or scan an ISBN to search for items</string>
    <string name="sc_find_movies">Find Movies</string>
    <string name="sc_find_below">Search for movies</string>
    <string name="sc_find_audio_books">Find Audiobooks</string>
    <string name="sc_findaudio_below">Search for audiobooks</string>
    <string name="s_coll_title">Search Collection</string>
    <string name="s_coll_subtitle">aa</string>
    <string name="s_coll_txt">Search the library\'s collection and the collections of any public library in Suffolk County. You can also request items be place on hold if the are unavailable or request items from another library</string>
    <string name="s_coll_txt1">Search For:</string>
    <string name="s_coll_txt2">Enter Search Terms</string>
    <string name="s_coll_txt3">Search By:</string>
    <string name="s_coll_txt4">Keyword</string>
    <string name="s_coll_txt5">Author</string>
    <string name="s_coll_txt6">Title</string>
    <string name="s_coll_txt7">Expand Search to All Suffolk Libraries:</string>
    <string name="search">Search</string>
    <string name="reset">Reset</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="s_mov_title">Search Movies</string>
    <string name="s_mov_subtitle1">The library shows outstanding films at 01:30 pm every Friday.</string>
    <string name="s_mov_subtitle2">All are welcome</string>
    <string name="s_mov_txt1">Enter Movie Title</string>
    <string name="s_audio_title">Search Audiobook</string>
    <string name="lib_gen_info">General Information</string>
    <string name="lib_gen_info1">General Info.</string>
    <string name="lib_info">The Mattituck-Laurel Library\'s goal is to provide quality services and programs in an effort to meet the informational, academic, and recreational needs of our patrons and the community.</string>
    <string name="lib_gen_below">Library address, opening hours, and staff information</string>
    <string name="lib_con_lib">Contact  the  Library</string>
    <string name="lib_con_below">Call or email the Library from your device</string>
    <string name="lib_dir_nev">Direction &amp; Navigation</string>
    <string name="lib_dir_below">Get turn-by-turn direction or Navigation to the library</string>
    <string name="lib_get_card">Get a Library Card</string>
    <string name="lib_get_below">Information on applying for a Mattituck-Laurel library card</string>
    <string name="lib_visit_lib">Visit the Library Online</string>
    <string name="lib_face">Library Facebook Page</string>
    <string name="gen_txt0">Nora Libretto, Trustee</string>
    <string name="gen_txt1">Mattituck-Laurel Library</string>
    <string name="gen_txt2">P.O. Box 1437</string>
    <string name="gen_txt3">13900 Main Rd.</string>
    <string name="gen_txt4">Mattituck, NY 11952</string>
    <string name="gen_txt5">(631)298&#8211;4134</string>
    <string name="gen_txt6">http://www.mattilibrary.org</string>
    <string name="gen_txt7">mattitucklibrary@gmail.com</string>
    <string name="gen_txt8">Library Hours</string>
    <string name="gen_txt9">Monday-Friday 10AM-8PM</string>
    <string name="gen_txt10">Saturday 10AM-5PM</string>
    <string name="gen_txt11">Sunday(Oct-June) 1PM-4PM</string>
    <string name="gen_txt12">Board of Trustees</string>
    <string name="gen_txt13">Kelly Fogarty, President</string>
    <string name="gen_txt14">Scott Verity, Trustee</string>
    <string name="gen_txt15">Jan Mitchell, Vice President</string>
    <string name="gen_txt16">Norman Wamback, Trustee</string>
    <string name="gen_txt17">Peter Kren, Secretary</string>
    <string name="gen_txt18">Kay Zegel, Library Director</string>
    <string name="gen_txt19">Mary Lou Singleton, Treasurer</string>
    <string name="gen_txt20">Jeffrey M. Walden, Assistant Director </string>
    <string name="gen_txt21">Holiday Closing 2013</string>
    <string name="gen_txt22">Tuesday, January 1 - NEW YEARS DAY</string>
    <string name="gen_txt23">Monday, January 21 - MARTIN LUTHAR KING</string>
    <string name="gen_txt25">Monday, February 18 - PRESIDENTS DAY</string>
    <string name="gen_txt26">Sunday, March 31 - EASTER SUNDAY</string>
    <string name="gen_txt27">Monday, May 27 - MEMORIAL DAY</string>
    <string name="gen_txt28">Thursday, July 4 - INDEPENDENCE DAY</string>
    <string name="gen_txt29">Monday, September 2 - LABOR DAY</string>
    <string name="gen_txt30">Monday, October 14 - COLUMBUS DAY</string>
    <string name="gen_txt31">Monday, November 11 - VETERANS\'S DAY</string>
    <string name="gen_txt32">Thursday, December 24 (Close at 12PM) - CHRISTMAS EVE</string>
    <string name="gen_txt33">Wednesday, December 25 - CHRISTMAS</string>
    <string name="gen_txt34">Tuesday, December 31 - NEW YEAR\'S EVE</string>
    <string name="my_subtitle">Patrons of the Mattituck-Laurel  library can see their checked out items, requested holds, fines and more your digital library card can be used like a real library card at the circulation of reference desks</string>
    <string name="my_view_my">View My Records</string>
    <string name="my_view_below">View your checked out items, requested holds, and fines</string>
    <string name="my_digital_lib">Digital Library Card</string>
    <string name="my_digital_below">A digital, scannable version of your library card</string>
    <string name="my_setup_notifi">Set Up Notifications</string>
    <string name="my_setup_below">Receive notifications about your record</string>
    <string name="my_check_notifi">Check Notifications</string>
    <string name="my_check_below">Check for notifications on your library record</string>
    <string name="sv_over">Overdrive</string>
    <string name="sv_over_below">Download eBooks and audiobooks</string>
    <string name="sv_zinio">Zinio</string>
    <string name="sv_zinio_below">Download digital magazines</string>
    <string name="sv_freegal">Freegal</string>
    <string name="sv_freegal_below">A collection of nearly 3 million MP3 songs for download</string>
    <string name="sv_p4">P4 Antiques</string>
    <string name="sv_p4_below">Antiques, collection and fine art prices and values</string>
    <string name="sv_e">E-Sequel</string>
    <string name="sv_e_below">A reader\'s guide to novels in series</string>
    <string name="sv_rr">ReferenceUSA</string>
    <string name="sv_r_below">Business information for reference and research</string>
    <string name="sv_m">Mango Languages</string>
    <string name="sv_m_below">Learn over 40 languages online</string>
    <string name="uni_atlantis">Atlantis  Aquarium  Passes</string>
    <string name="uni_atlantis_below">Discounted tickets for the Atlantis Long Island Aquarium</string>
    <string name="uni_local">Local History &amp; Genealogy</string>
    <string name="uni_local_below">Long Island historical papers, census information and obituaries</string>
    <string name="uni_museum">Museum Passes</string>
    <string name="uni_museum_below">Borrow to local museums</string>
    <string name="uni_pub">Public Access Comp</string>
    <string name="uni_pub1">Public Access Computers</string>
    <string name="uni_pub_below">Internet computer are available for public use</string>
    <string name="uni_pc">Public Fax</string>
    <string name="uni_pc_below">Fax service provided by the library</string>
    <string name="uni_ps">Public Scanner</string>
    <string name="uni_ps_below">Scan books, documents and photos</string>
    <string name="uni_w">Wireless Printing</string>
    <string name="uni_w_below">Print documents or web pages from your computer</string>
    <string name="uni_sug">Suggest a Purchase</string>
    <string name="uni_sug_below">Request the library purchase an item</string>
    <string name="atlantis_dialog">Purchase discounted tickets for the atlantis long Island Aquarium in Riverhead, one of Long Island\'s top year-round tourist attraction. Tickets are $14.00 each for all ages. Purchase tickets at the Library\'s reference desk. Tickets do not expire-can be used all year long.</string>
    <string name="loc_txt1">1910&#8211;11 Census</string>
    <string name="loc_txt1_below">A digitalized copy of census taken by the Lawton Company of Maine for a Southold Town-Shelter Island Register. The census was taken during the summer 1910.</string>
    <string name="loc_txt2">Gildersleeve Scrapbooks</string>
    <string name="loc_txt2_below">A digitalized copy of the Gildersleeve Scrapbook collection and donated by the late Donald Gildersleeve of Mattituck. The scrapbook consist of newspaper clippings from local North Fork newspapers. There are 22 scrapbook covering the years 1915&#8211;1982.</string>
    <string name="loc_txt3">Marriages</string>
    <string name="pac_dia_txt1">Mattituck-Laurel Library has computers available for public use.</string>
    <string name="pac_dia_txt2">Adults/Teens</string>
    <string name="pac_dia_txt3">Eight workstations are available in the reference room of the library for adult/teen patrons. Eight laptop computers are also available for adult/teen use in the library.. Microsoft Office 2007 and Microsoft Works is available on all computers.</string>
    <string name="pac_dia_txt4">Tween</string>
    <string name="pac_dia_txt5">Eight laptop computers are available for tweens between the ages of eight and twelve in the children\'s room. A valid library card is required to check out a Tween laptop. Microsoft 2007 is available on computers.</string>
    <string name="pac_dia_txt6">Children and Parents</string>
    <string name="pac_dia_txt7">Three iPads are available for in library use to children between the ages of three and twelve. A valid library card is required. Three laptops are available for parents to use in the children\'s room. A valid library card is required.</string>
</resources>