<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:id="@+id/container"
    tools:context=".GeneralInfoActivity">
    <RelativeLayout 
        android:id="@+id/gen_info_rel1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/banner">
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/gen_info_rel2"
        android:layout_below="@+id/gen_info_rel1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/banner_back"
        android:padding="2dp"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_back"
            android:visibility="invisible"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/email" 
                />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/lib_gen_info"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title"
            
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/gen_info_rel3"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:background="@drawable/banner_back"
        android:layout_alignParentBottom="true"
        android:padding="2dp"
        >
        <RelativeLayout
            android:id="@+id/gen_info_btn_web"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/btn_back"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:onClick="onGlobe"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_globe" 
                android:onClick="onGlobe"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/gen_info_btn_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/gen_info_btn_web"
            android:background="@drawable/btn_back"
            android:layout_marginRight="5dp"
            android:onClick="onDial"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_phone"
                android:onClick="onDial" 
                />
        </RelativeLayout>
        <RelativeLayout
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/gen_info_btn_phone"
            android:background="@drawable/btn_back"
            android:layout_marginRight="5dp"
            android:onClick="onEmail"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_email"
                android:onClick="onEmail" 
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_back"
            android:layout_marginLeft="20dp"
            android:onClick="onBack"
            android:visibility="gone"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_arrowround" 
                android:onClick="onBack"
                />
        </RelativeLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
            android:background="@drawable/btn_back1" 
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/arrowround"
            android:paddingRight="5dp"
            android:onClick="onBack"
            android:layout_marginLeft="20dp"
            />
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_below="@+id/gen_info_rel2"
        android:layout_above="@+id/gen_info_rel3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/white_bg"
        android:padding="10dp"
        >      
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:scrollbars="none"         
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" 
                android:gravity="center_horizontal"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content"
                    android:text="@string/lib_gen_info"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:textSize="@dimen/sub_title"
                    android:visibility="gone"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt1"
                    android:textColor="@android:color/black"    
                    android:textSize="@dimen/menu"
                    android:layout_marginTop="5dp"  
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt2"
                    android:textColor="@android:color/black"   
                    android:textSize="@dimen/menu"   
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt3"
                    android:textColor="@android:color/black"      
                    android:textSize="@dimen/menu"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt4"
                    android:textColor="@android:color/black" 
                    android:textSize="@dimen/menu"     
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt5"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/menu"      
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt6"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/menu"      
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt7"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/menu"      
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt8"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:textSize="@dimen/menu"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt9"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/menu"      
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt10"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/menu"      
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt11"
                    android:textColor="@android:color/black"      
                    android:textSize="@dimen/menu"
                    />
                 <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt12"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="@dimen/menu"
                    />
                 <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt13"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/menu"      
                    />
                 <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt15"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/menu"      
                    />
                 <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt17"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/menu"      
                    />
                 <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt19"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/menu"      
                    />
                 <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt0"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/menu"      
                    />
                 <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt14"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/menu"      
                    />
                 <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt16"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/menu"      
                    />
                 <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt18"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/menu"      
                    />
                 <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt20"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/menu"      
                    />
                 <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt21"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="@dimen/menu"
                    />
                 <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt22"
                    android:textColor="@android:color/black"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/menu"      
                    />
                 <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt23"
                    android:textColor="@android:color/black"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/menu"      
                    />
                 <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt25"
                    android:textColor="@android:color/black"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/menu"      
                    />
                 <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt26"
                    android:textColor="@android:color/black"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/menu"      
                    />
                 <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt27"
                    android:textColor="@android:color/black"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/menu"      
                    />
                 <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt28"
                    android:textColor="@android:color/black"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/menu"      
                    />
                 <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt29"
                    android:textColor="@android:color/black"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/menu"      
                    />
                 <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt30"
                    android:textColor="@android:color/black"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/menu"      
                    />
                 <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt31"
                    android:textColor="@android:color/black"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/menu"      
                    />
                 <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt32"
                    android:textColor="@android:color/black"
                    android:gravity="center_horizontal"  
                    android:textSize="@dimen/menu"    
                    />
                 <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt33"
                    android:textColor="@android:color/black"      
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/menu"
                    />
                 <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_txt34"
                    android:textColor="@android:color/black" 
                    android:gravity="center_horizontal" 
                    android:textSize="@dimen/menu"    
                    />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>


<!-- .GeneralInfoActivity -->