<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/green"
  	>
    <RelativeLayout
        android:id="@+id/pac_rel1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/banner_back"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" 
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:layout_centerVertical="true" 
            android:textSize="@dimen/title"
            />
        <ImageButton
            android:id="@+id/pac_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_cancel" 
            />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/pac_rel1"
        android:scrollbars="none" 
        >
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:background="@drawable/white_bg"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:gravity="center_horizontal"
	    android:padding="5dp"
	    >
	    <TextView
            android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
            android:text="@string/uni_pub1"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:textSize="@dimen/sub_title"
            />
	    <TextView
			android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pac_dia_txt1"
            android:textSize="@dimen/menu"
            android:textColor="@android:color/black"    
            android:layout_margin="5dp"  
            />
	    <TextView
	        android:layout_marginTop="5dp"
            android:layout_width="match_parent" 
			android:layout_height="wrap_content"
            android:text="@string/pac_dia_txt2"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:textSize="@dimen/menu"
            />
	     <TextView
			android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pac_dia_txt3"
            android:textSize="@dimen/menu"
            android:textColor="@android:color/black"     
            />
	     <TextView
	        android:layout_marginTop="5dp"
            android:layout_width="match_parent" 
			android:layout_height="wrap_content"
            android:text="@string/pac_dia_txt4"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:textSize="@dimen/menu"
            />
	     <TextView
			android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pac_dia_txt5"
            android:textSize="@dimen/menu"
            android:textColor="@android:color/black"     
            />
	     <TextView
	        android:layout_marginTop="5dp"
            android:layout_width="match_parent" 
			android:layout_height="wrap_content"
            android:text="@string/pac_dia_txt6"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:textSize="@dimen/menu"
            />
	     <TextView
			android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pac_dia_txt7"
            android:textSize="@dimen/menu"
            android:textColor="@android:color/black"     
            />
	</LinearLayout>
	</ScrollView>
</RelativeLayout>